<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>iiwa_right_arm_tactile_ikfast_plugin</name>
  <version>0.0.0</version>
  <description>IKFast plugin for iiwa</description>
  <license>BSD</license>
  <maintainer email="malasiot@todo.todo">malasiot</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/iiwa_right_arm_tactile_moveit_ikfast_plugin_description.xml"/>
  </export>
  <build_depend>rclcpp</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>moveit_core</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>moveit_core</exec_depend>
</package>
